--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-769ee81c-f988-4625-af2c-98f87ad5008e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
